2008-09-03  Dafydd Crosby <dcrosby@userful.com>

	* printer/Dell-3100cn.xml, PPD/Dell, driver/pxlmono.xml:
	added the Dell 3100cn

2008-09-03  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-DesignJet_750.xml, printer/Apple-12_640ps.xml,
	printer/Ricoh-Aficio_5206.xml: Fixed inconsistencies between the
	model names and the XML file names, which were preventing PPDs
	from being accessible.

2008-09-03  Tim Waugh  <twaugh@redhat.com>

	* printer/Lexmark-E120n.xml: Added IEEE 1284 device ID (RH bug
	#201318).

2008-09-03  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/44.xml: Fixed choice names which lead to broken PPDs for
	  the "pbm2l7k" driver (Bug #167).

	* printer/Brother-HL-2060.xml: Changed recommended driver to
	  "hpijs" (Bug #166, RH bug #292021).

2008-09-02  George Liu <george.liu@ricoh-tech.com>

	* PPD/: Fixed missing colon bug in 412 Ricoh Family PPD files. 

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/Brother-HL-2060.xml: Fixed typo in model name which
	prevented this PPD being accessible.

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/HP-Color_LaserJet_9500_MFP.xml: Fixed typo in model
	name which prevented this PPD being accessible.

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* printer/HP-LaserJet_4345_MFP.xml: Fixed typo in model name
	which prevented this PPD being accessible (RH bug #459847).

2008-08-28  Dafydd Crosby <dcrosby@userful.com>
	* PPD/Oce/Others: Moved Oce-cm2520.ppd to non-free repository.

2008-08-20  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/GS-HalftoningAlgorithm-Gray.xml, driver/deskjet.xml,
	  driver/dj505j.xml, driver/djet500.xml, driver/gdi.xml,
	  driver/hl1250.xml, driver/hl7x0.xml, driver/laserjet.xml,
	  driver/lj4dith.xml, driver/ljet2p.xml, driver/ljet3.xml,
	  driver/ljet3d.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljetplus.xml, driver/oki4w.xml: Made Halftoning option
	  work with PDF input files.

	* driver/hl7x0.xml: Added Ghostscript command line also with