@@ -1857,6 +1857,9 @@
       <id>printer/Lexmark-C935hdn</id>
     </printer>
     <printer>
+      <id>printer/Lexmark-E120n</id>
+    </printer>
+    <printer>
       <id>printer/Lexmark-E350d</id>
       <!-- Lexmark E350d -->
     </printer>
