@@ -1023,6 +1023,9 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
       <id>printer/Lexmark-C720n</id>
     </printer>
     <printer>
+      <id>printer/Lexmark-E120n</id>
+    </printer>
+    <printer>
       <id>printer/Lexmark-E230</id>
     </printer>
     <printer>
