@@ -9,7 +9,8 @@
             <x>600</x>
             <y>600</y>
          </dpi>
-      <consumables></consumables>
+      <consumables>
+      </consumables>
       </resolution>
    </mechanism>
    <url></url>
@@ -17,23 +18,32 @@
       <postscript level="3">
       </postscript>
       <pcl level="6"/>
-      <!--no pjl-->
+      <pjl/>
       <!--no "text"-->
    </lang>
    <autodetect>
      <usb>
-       <commandset>PCL 6 Emulation, PostScript Level 3 For Mac Emulation, NPAP, PJL</commandset>
-       <description>Lexmark E120n</description>
        <manufacturer>Lexmark International</manufacturer>
        <model>Lexmark E120n</model>
+       <description>Lexmark E120n</description>
+       <commandset>PCL 6 Emulation, PostScript Level 3 For Mac Emulation, NPAP, PJL</commandset>
      </usb>
    </autodetect>
-   <functionality>B</functionality>
+   <functionality>A</functionality>
+   <driver>pxlmono</driver>
+   <drivers>
+     <driver>
+       <id>pxlmono</id>
+     </driver>
+     <driver>
+       <id>Postscript</id>
+     </driver>
+   </drivers>
    <comments>
       <en>
       Throughput = 20
-
-      Foomatic entry made by PPDtoXML T/G 0.05
+      
+      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03
       </en>
    </comments>
 </printer>
