@@ -1,7 +1,9 @@
 2008-09-03  Dafydd Crosby <dcrosby@userful.com>
 
-	* printer/Dell-3100cn.xml, PPD/Dell, driver/pxlmono.xml:
+	* printer/Dell-3100cn.xml, PPD/Dell, driver/pxlmono.xml,
+	driver/Postscript.xml, printer/Lexmark-E120n.xml:
 	added the Dell 3100cn
+	updated Lexmark E120n information
 
 2008-09-03  Tim Waugh  <twaugh@redhat.com>
 
